# Silnik2D_PKG_PSK

./: CMakeLists.txt  README.md  ___All_Errors.txt
__.vs/: CMake Overview_Error.txt
include/: Engine.hpp  Logger.hpp
src/: Engine.cpp  Logger.cpp  main.cpp
